--- a/src/app/user/dashboard/dashboard.component.html
+++ b/src/app/user/dashboard/dashboard.component.html
@@ -1,17 +1,18 @@
-<span>This is you dash board</span>
 <div class="dashboard">
-  <div class="profil_pic"></div>
-  <div class="dashboard_menu">
-    <md-list>
-      <md-list-item>Billing</md-list-item>
-      <md-list-item>favrouite</md-list-item>
-      <md-list-item>my-orders</md-list-item>
-      <md-list-item md-button routerLink="delivery">Delivery</md-list-item> 
-      <md-list-item md-button routerLink="menucms">Menucms</md-list-item>      
-           
-    </md-list>
-  </div>
-  <router-outlet></router-outlet>
-
+  <div class="sidenav">
+    <ul>     
+        
+          <li><a md-button>Billing</a></li>
+          <li><a md-button>favrouite</a></li>
+          <li><a md-button>my-orders</a></li>
+          <li><a md-button routerLink="delivery">Delivery</a></li>
+          <li><a md-button routerLink="menucms">Menucms</a></li>
+       
+    </ul>
+</div>      
   
+
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
