--- a/src/app/user/dashboard/dashboard.component.scss
+++ b/src/app/user/dashboard/dashboard.component.scss
@@ -1,13 +1,33 @@
 .dashboard{
-    display: flex;
-    .profil_pic{
-        display: block;
-        background-color: gray;
-        min-height: 100px;
-        min-width: 100px;
+    display: grid;
+    grid-template-columns: 2fr 1fr ;
+    grid-column-gap: 50px;
+    .sidenav{
+        position: fixed;
+        left: 0;
+        top:56px;
+        min-width: 150px;
+        height: 100%;
+        min-height: 100%;
+        background-color:#aaa; 
+        ul{
+            list-style: none;
+            margin-top:50px;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-auto-rows: 30px;
+            li{
+                display: inline-block;
+                a{
+                    text-decoration: none;
+                    display: block;
 
+                }
+            }
+        }
     }
-    .dashboard_menu{
-        background-color: goldenrod;
+    .content{
+        // margin-right: 50px;
     }
+    
 }
