--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -22,11 +22,11 @@
     
         <span><a>Forgot Password?</a></span>
 
-        <button  type="button" class="form-control" class="form-control facebook_login" md-raised-button>Login With Facebook</button>
+        <button  type="button" class="form-control" class="form-control facebook_login" (click)="loginWithFacebook()" md-raised-button>Login With Facebook</button>
 
-        <button  type="button" class="form-control" class="form-control twitter_login" md-raised-button>Login With Twitter</button>
+        <button  type="button" class="form-control" class="form-control twitter_login" (click)="loginWithTwitter()" md-raised-button>Login With Twitter</button>
 
-        <button  type="button" class="form-control" class="form-control google_login" md-raised-button>Login With Google</button>
+        <button  type="button" class="form-control" class="form-control google_login" (click)="loginWithGoogle()" md-raised-button>Login With Google</button>
         
         
     </form>
