Menu UI Completed

--- a/src/app/Components/toolbar/toolbar.component.scss
+++ b/src/app/Components/toolbar/toolbar.component.scss
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     font-size: 15px;
+    height: 64px;
     font-weight: bold;
     button {
-      height: 56px;
+      height: 64px;
+      width: fit-content;
       text-align: center;
     }
     .wrapper {
@@ -15,6 +17,8 @@
       grid-auto-rows: 56px;
       align-items: center; // border: 1px solid yellow;
       align-items: center;
+      position: absolute;
+      top: 0;
       .toolbar_title {
         position: fixed;
         .back_btn {
