--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="appWrapper">
-  <div>
+  <div class="app-toolbar">
     <app-toolbar></app-toolbar>
   </div>
 
-  <div>
+  <div class="router-outlet">
     <router-outlet></router-outlet>
   </div>
 
-  <div>
+  <div class="app-navbar">
     <app-navbar></app-navbar>
   </div>
 
