--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,30 +1,64 @@
-.menu_content{
-    box-sizing: border-box;
-    width:100%;
-    margin: 0;
-    ul.category{       
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: 1fr;
-        grid-row-gap: 20px;
-        justify-content: center;
-        li{
-            display: inline-block;
-            text-align: center;
-            background-color:salmon;
-            :hover{
-                cursor: pointer;
-                color: white;
-            }
-            a{
-                font-size: 12px;
-                display: block;
-                text-decoration: none;
-                height: inherit;
-                line-height: 200px;
-            }
-
-        }
+.menu_content {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  .search_bar {
+    height: 30px;
+    md-card {
+      height: 100%;
     }
-}
+  }
+  .menu_nav {
+    flex: 1;
+    width: 100%;
+    margin-top: 20px;
+    md-card {
+      .nav_list {
+        display: flex;
+        align-items: center;
+        .beverage_dropdown {
+        }
+        .food_dropdown {
+          .food_menu{
+            li{
+              a{
+              }
+            }
+            
+          }
+          
+        }
+      }
+    }
+  }
+  .menu-list {
+    margin-top: 20px;
+    flex: 2;
+    md-card {
+      padding: 0 10px;
+      margin-bottom: 2px;
+      height: 40px;
+      ul {
+        list-style: none;
+        li {
+          height: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          .menu_name {
+            min-width: 30px;
+            max-width: 50px;
+          }
+          
+        }
+      }
+    }
+  }
 
+  .added {
+            color: red;
+          }
+}
