--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,11 +1,15 @@
 .menu_content {
   box-sizing: border-box;
-  width: 100%;
-  margin: 0;
+  width: 70%;
+
+  overflow-x: hidden;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 540px) {
+    width: 100%;
+  }
   .search_bar {
-    height: 30px;
     md-card {
       height: 100%;
     }
@@ -18,7 +22,11 @@
       .nav_list {
         display: flex;
         align-items: center;
+        .title{
+          padding-right: 3px;
+        }
         .beverage_dropdown {
+          padding-right: 5px;
         }
         .food_dropdown {
           .food_menu{
@@ -39,7 +47,6 @@
     md-card {
       padding: 0 10px;
       margin-bottom: 2px;
-      height: 40px;
       ul {
         list-style: none;
         li {
