Orders entry complete

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -4,4 +4,6 @@
     <button md-raised-button routerLink="/menu">Order Now</button>
     <button md-raised-button routerLink="dashboard/reservation">Book a table</button>  
 </div>
+<div class="slides"></div>
+
 </div>
