--- a/src/app/user/dashboard/dashboard.component.html
+++ b/src/app/user/dashboard/dashboard.component.html
@@ -9,11 +9,10 @@
 
   <div class="sidenav">
     <ul>
-      <li><a md-button>Billing</a></li>
-      <li><a md-button>Orders</a></li>
+      <li><a md-button routerLink="billing">Billing</a></li>
+      <li><a md-button routerLink="cart">Orders</a></li>
       <li><a md-button routerLink="delivery">Delivery</a></li>
-      <!-- <li><a md-button>Favourite</a></li> -->
-      
+       <li><a md-button routerLink="reservations">Reservation</a></li> 
       <li><a md-button routerLink="menucms">Menucms</a></li>
 
     </ul>
