--- a/src/app/Components/home/home.component.scss
+++ b/src/app/Components/home/home.component.scss
@@ -1,8 +1,19 @@
 .slideshow{
     width: 100%;
     height: 300px;
-    background-color: #ddd;
     .fixed_btn{
         text-align: center;
+        // z-index:0;
     }
+    .slides{
+    width: 100%;
+    height: 100%;
+    background-image:url("../../../assets/Images/jimi-filipovski-189721.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    
+    
+        
+    }
+    
 }
