--- a/src/app/user/reservation/reservation.component.html
+++ b/src/app/user/reservation/reservation.component.html
@@ -1,3 +1,11 @@
-<p>
-  reservation works!
-</p>
+<div>
+  <h2>Tables Status</h2>
+  <ul>
+    <li *ngFor="let table of tables|async">
+      <span>table {{table.$key}}</span>
+      <span>:  {{table.occupied?'Occupied':'Open'}}</span>
+      
+    </li>
+  </ul>
+</div>
+<button md-raised-button>Reserve A Table</button>
