--- a/src/app/user/dashboard/dashboard.component.scss
+++ b/src/app/user/dashboard/dashboard.component.scss
@@ -3,6 +3,7 @@
   grid-template-rows: 1fr 50px 2fr;
   .user_profile {
     background-color: #3F51B5;
+    cursor: pointer;
     .user_info {
       width: 200px;
       height: 100%;
@@ -11,13 +12,17 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+
       .profile_pic {
+        
         margin: 0 auto;
         height: 80px;
         width: 80px;
         border: 3px solid white;
         border-radius: 50%;
-      }
+        background-color: #eee;
+      
+    }
       .user_detail {
         color: #fff;
         margin-top: 10px;
@@ -50,5 +55,6 @@
   }
   .content {
     margin-top: 20px; // margin-right: 50px;
+    margin-bottom: 80px;
   }
 }
