--- a/src/app/user/delivery/delivery.component.html
+++ b/src/app/user/delivery/delivery.component.html
@@ -1,1 +1,3 @@
-<app-google-maps></app-google-maps>
+ <app-google-maps></app-google-maps> 
+
+ <button md-raiser-button (click)="delivery()">Delivery to Location</button>
